--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 Flask-Cors==3.0.8
 flask-restplus==0.12.1
-flask-sqlalchemy==2.4.0
+Flask-SQLAlchemy==2.4.0
+Flask-Migrate==2.5.2
+Flask-Script==2.0.6
 celery==4.3.0
 redis==3.2.1
